--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "rollup": "^4.13.2"
+  },
+  "dependencies": {
+    "@urql/core": "^4.3.0"
   }
 }
